add css scaffolding

--- a/index.html
+++ b/index.html
@@ -28,12 +28,35 @@
         <main>
 
             <!-- Main-Top -->
-            <div class="main-top"></div>
+            <div class="main-top">
+                
+                <div class="left-main-top">
+
+                </div>
+                <div class="right-main-top">
+
+                </div>
+
+            </div>
             <!-- /Main-Top -->
 
 
             <!-- Main-Bottom -->
-            <div class="main-bottom"></div>
+            <div class="main-bottom">
+                <div class="main-contacts">
+
+                </div>
+                <div class="main-messages">
+
+                    <div class="main-messages-top">
+
+                    </div>
+                    <div class="main-messages-bottom">
+
+                    </div>
+                    
+                </div>
+            </div>
             <!-- /Main-Bottom -->
 
 
