--- a/index.html
+++ b/index.html
@@ -28,21 +28,57 @@
         <main>
 
             <!-- Main-Top -->
-            <div class="main-top">
+            <section class="main-top">
                 
+                <!-- Left Main Top -->
                 <div class="left-main-top">
 
+                    <div class="user-box">
+                        <span class="user-image">
+                            <img src="img/avatar_io.jpg" alt="">
+                        </span>
+                        <span class="user-name">
+                            Sofia
+                        </span>
+                    </div>
+
+                    <div class="user-button">
+                        <div class="btn"><i class="fas fa-circle-notch"></i></div>
+                        <div class="btn"><i class="fas fa-comment-alt"></i></div>
+                        <div class="btn"><i class="fas fa-ellipsis-v"></i></div>
+                    </div>
+
                 </div>
+                <!-- /Left Main Top -->
+
+                <!-- Right Main Top -->
                 <div class="right-main-top">
 
-                </div>
+                    <div class="user-box">
+                        <span class="user-image">
+                            <img src="img/avatar_1.jpg" alt="">
+                        </span>
+                        <span class="user-name">
+                            <span>Michele</span><br>
+                            <span class="last-acc-mess">Ultimo accesso oggi alle 12:00</span>
+                        </span>
+                    </div>
 
-            </div>
+                    <div class="user-button">
+                        <div class="btn"><i class="fas fa-search"></i></div>
+                        <div class="btn"><i class="fas fa-paperclip"></i></div>
+                        <div class="btn"><i class="fas fa-ellipsis-v"></i></div>
+                    </div>
+
+                </div>
+                <!-- /Right Main Top -->
+
+            </section>
             <!-- /Main-Top -->
 
 
             <!-- Main-Bottom -->
-            <div class="main-bottom">
+            <section class="main-bottom">
                 <div class="main-contacts">
 
                 </div>
@@ -56,7 +92,7 @@
                     </div>
                     
                 </div>
-            </div>
+            </section>
             <!-- /Main-Bottom -->
 
 
