css add left-main

--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
                     <!-- Contacts Input -->
                     <div class="contacts-input-box">
                         <div class="contacts-input">
-                            <div class="input-icon">
-                                <label for="contacts"><i class="fas fa-search"></i></label>
-                            </div>
-                            <input type="text" name="" id="contacts" placeholder="Cerca o inizia una nuova chat">
+                            <label  for="contacts-search">
+                                <div class="input-icon">
+                                    <i class="fas fa-search"></i>
+                                </div>
+                            </label>
+                            <input type="text" name="" id="contacts-search" placeholder="Cerca o inizia una nuova chat">
                         </div>
                     </div>
                     <!-- /Contacts Input -->
@@ -108,10 +110,42 @@
                 <!-- Main Right Top -->
                 <div class="main-right-top">
 
-                  
+                    <div class="contact-user">
+                        <span class="user-image">
+                            <img src="img/avatar_1.jpg" alt="">
+                        </span>
+                        <span class="user-name">
+                            <span>Michele</span>
+                            <span class="gray-color">Ultimo accesso oggi alle 12:00</span>
+                        </span>
+                    </div>
+
+                    <div class="user-button">
+                        <div class="btn"><i class="fas fa-search"></i></div>
+                        <div class="btn"><i class="fas fa-paperclip"></i></div>
+                        <div class="btn"><i class="fas fa-ellipsis-v"></i></div>
+                    </div>
 
                 </div>
                 <!-- /Main Right Top -->
+
+                <!-- Main Right Center -->
+                <div class="main-right-center">
+                    <div class="container">
+                        <span class="sent-message">ciaoooooooooooo</span>
+                        <span class="sent-message">ciaoooooooooooo</span>
+                        <span class="message-received">ciaoooooooooooo</span>
+                        <span class="sent-message">ciaoooooooooooo</span>
+
+                    </div>
+                </div>
+                <!-- /Main Right Center -->
+
+                <!-- Main Right bottom -->
+                <div class="main-right-bottom">
+                    
+                </div>
+                <!-- /Main Right bottom -->
            </div>
             <!-- /MAIN RIGHT -->
 
