add css input-message

--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
 
                 <!-- Main Right bottom -->
                 <div class="main-right-bottom">
-                    
+                    <div class="emoji-icon"><i class="far fa-smile"></i></div>
+                    <div class="input-message"><input type="text" placeholder="Scrivi un messaggio"></div>
+                    <div class="vocal-icon"><i class="fas fa-microphone"></i></div>
                 </div>
                 <!-- /Main Right bottom -->
            </div>
