--- a/index.html
+++ b/index.html
@@ -157,9 +157,19 @@
                                 <div class="arrow-down" @click="showMainArrow(index)" >
                                     <i class="fas fa-chevron-down"></i>
                                 </div>
-                                <div class="main-arrow" :class="{'main-arrow-active' : currentMainArrow === index}">
-                                    <div class="info-message">Message info</div>
-                                    <div class="delete-message">Delete message</div>
+                                <div
+                                class="main-arrow"
+                                :class="{'main-arrow-active' : currentMainArrow === index}"
+                                >
+                                    <div class="info-message">
+                                        Message info
+                                    </div>
+                                    <div
+                                    class="delete-message"
+                                    @click="deleteMessage(index)"
+                                    >
+                                        Delete message
+                                    </div>
                                 </div>
                                 <div class="mess-date">{{ element.date.substring(11,16) }}</div>
                             </div>
